--- a/404.md
+++ b/404.md
@@ -6,10 +6,11 @@ title: Page not found
 toc: false
 ---
 
-# 404 Not Found
+# 404 找不到網頁
 
-If you typed the web address, check it is correct.
+如果您手動輸入網址，請確認網址是否正確。
 
-If you pasted the web address, check you copied the entire address.
+如果您複製貼上此網址，請確認是否有複製到完整的網址。
 
-If the web address is correct or you followed a link or button, email the [Foundation for Public Code staff](mailto:info@publiccode.net) so we'll be able to help you out, as well as correct our mistake.
+若網址正確或是您按下連結或按鈕，請寫信給 [the Foundation for Public Code 人
+員](mailto:info@publiccode.net)，讓我們能夠協助您，並且修正我們的錯誤。
