--- a/CC0-1.0.md
+++ b/CC0-1.0.md
@@ -7,12 +7,12 @@ redirect_from:
     - LICENSE.html
 ---
 
-# Creative Commons Zero v1.0 Universal
+# Creative CC Zero v1.0 Universal 授權
 
 <!-- TODO FIXME: move styling to the proper place, not inline html -->
 <style>.highlight { flex: 2 2 80%; max-width: 100%; } </style>
 
-This license is the legal contract that allows anyone to do anything they like with the content in this entire document.
+此授權為法律合約，允許任何人任意使用本文件任何內容。
 
 ```text
 {% include_relative LICENSE %}
