--- a/404.md
+++ b/404.md
@@ -8,9 +8,9 @@ toc: false
 
 # 404 找不到網頁
 
-如果您手動輸入網址，請確認網址是否正確。
+如果您是手動輸入網址，請確認網址是否正確。
 
-如果您複製貼上此網址，請確認是否有複製到完整的網址。
+如果您是複製貼上此網址，請確認是否有複製到完整的網址。
 
-若網址正確或是您按下連結或按鈕，請寫信給 [the Foundation for Public Code 人
-員](mailto:info@publiccode.net)，讓我們能夠協助您，並且修正我們的錯誤。
+若網址正確，或您是按下連結或按鈕來的，請寫信給 [Foundation for Public Code 員
+工](mailto:info@publiccode.net)，讓我們協助您，並同時修正我們的錯誤。
