--- a/CC0-1.0.md
+++ b/CC0-1.0.md
@@ -7,12 +7,12 @@ redirect_from:
     - LICENSE.html
 ---
 
-# Creative CC Zero v1.0 Universal 授權
+# 創用 CC0 1.0 通用授權
 
 <!-- TODO FIXME: move styling to the proper place, not inline html -->
 <style>.highlight { flex: 2 2 80%; max-width: 100%; } </style>
 
-此授權為法律合約，允許任何人任意使用本文件任何內容。
+此授權的法律契約，允許任何人任意使用本文件中的任何內容。
 
 ```text
 {% include_relative LICENSE %}
